--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.port=9000
 #server.servlet.context-path=/webex
 
 #dataSource \uC124\uC815
-spring.datasource.url=jdbc:mysql://localhost:3306/bookdb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #mybatis \uC124\uC815 ( mapper xml \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815, type alias \uC9C0\uC815 )
 mybatis.mapper-locations=mapper/*.xml
-mybatis.type-aliases-package=com.ssafy.test.dto
+mybatis.type-aliases-package=com.ssafy.ky.dto
 
 # JSP Path (ViewResolver)
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -18,7 +18,7 @@ spring.mvc.view.suffix=.jsp
 
 #\uB85C\uADF8 \uB808\uBCA8 \uC124\uC815
 logging.level.root=info
-logging.level.com.ssafy.test=debug
+logging.level.com.ssafy.ky=debug
 
 #\uD30C\uC77C \uC5C5\uB85C\uB4DC \uAD00\uB828 \uC124\uC815 (file-size \uC804\uC1A1\uD558\uB294 \uAC01 \uD30C\uC77C \uD06C\uAE30, request-size \uC804\uC1A1\uD558\uB294 \uBAA8\uB4E0 \uD30C\uC77C \uD06C\uAE30
 spring.servlet.multipart.max-file-size=5MB
@@ -26,5 +26,4 @@ spring.servlet.multipart.max-request-size=5MB
 
 #Failed to start bean 'documentationPluginsBootstrapper'; error
 #swagger 3\uBC84\uC804 \uC0AC\uC6A9 \uC2DC \uCD94\uAC00
->>>>>>> b8d60a83c2d248eb17ecb4e6fb8990208ac21602
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
