--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # \uC11C\uBE44\uC2A4\uD560 \uD3EC\uD2B8\uBC88\uD638, context-root \uACBD\uB85C \uC124\uC815
 server.port=9000
-#server.servlet.context-path=/webex
+server.servlet.context-path=/api
 
 #dataSource \uC124\uC815
 spring.datasource.url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC
