--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=9000
 server.servlet.context-path=/api
 
 #dataSource \uC124\uC815
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafyvue?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
