--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ spring.servlet.multipart.max-request-size=5MB
 #Failed to start bean 'documentationPluginsBootstrapper'; error
 #swagger 3\uBC84\uC804 \uC0AC\uC6A9 \uC2DC \uCD94\uAC00
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.mail.host=jiyeonyou0416@naver.com
+spring.mail.port=465
+spring.mail.username=유지연
+spring.mail.password=wldus7725
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
