--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,17 @@
 		     <artifactId>mail</artifactId>
 		     <version>1.4.3</version>
   		</dependency>
+  		<dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+        <dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-engine-core</artifactId>
+			<version>2.0</version>
+		</dependency>
+        
 	</dependencies>
 
 	<build>
