--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -77,6 +77,25 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+		     <groupId>javax.mail</groupId>
+		     <artifactId>mail</artifactId>
+		     <version>1.4.3</version>
+  		</dependency>
+  		<dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+        <dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-engine-core</artifactId>
+			<version>2.0</version>
+		</dependency>
         
 	</dependencies>
 
@@ -92,6 +111,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
